--- a/src/client/containers/contributes/Detail/style.module.scss
+++ b/src/client/containers/contributes/Detail/style.module.scss
@@ -1,19 +1,6 @@
 @import '../../../styles/colors';
 @import '../../../styles/font-size';
 
-.syntaxHighlightContainer {
-  position: relative;
-  .syntaxHighlightFileName {
-    background-color: $dark-gray;
-    color: $white;
-    font-size: $fs-small;
-    padding: 1px 6px;
-    position: absolute;
-    right: 0;
-    top: 0;
-  }
-}
-
 .detailContainer {
   background-color: $white;
   padding: 30px;
